--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "clean": "rm -rf node_modules && rm cv.pdf"
   },
   "keywords": [],
   "author": "",
